--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <title>Chat</title>
   <base href="/">
-
+  <script src="http://cdn.auth0.com/js/lock/10.2/lock.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
   <app-root>Loading...</app-root>
-</body>
 </html>
